Fix cramped blog layout with better content width
- Override $max-width to 100% to remove 1280px constraint
- Set generous 1600px max-width for very large screens
- Fix content/sidebar width calculations using theme variables
- Position TOC absolutely on right side with sticky behavior
- Remove conflicting CSS and duplicate declarations
- Add subtle background to TOC for better visibility
- Ensure responsive design maintained

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,47 +4,51 @@
 
 @charset "utf-8";
 
+// Override theme variables BEFORE importing theme
+$max-width: 100% !default;  // Remove the 1280px constraint
+$right-sidebar-width-narrow: 200px !default;
+$right-sidebar-width: 250px !default;
+$right-sidebar-width-wide: 300px !default;
+
 // Import Minimal Mistakes theme
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
 // Custom styles for better readability and layout
 
-// Override sidebar widths for more content space
-$right-sidebar-width-narrow: 200px !default;
-$right-sidebar-width: 250px !default;
-$right-sidebar-width-wide: 300px !default;
-
-// Remove the constrained width for main content
+// Container width adjustments
 .page {
   @include breakpoint($large) {
-    padding-right: 0;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 
   @include breakpoint($x-large) {
-    padding-right: 0;
-    max-width: 1400px;
+    max-width: 1600px;  // Generous max-width for very large screens
+    margin: 0 auto;
+    padding-left: 2em;
+    padding-right: 2em;
   }
 }
 
-// Fix the cramped content issue
+// Inner wrap adjustments
 .page__inner-wrap {
-  @include breakpoint($x-large) {
-    max-width: 1400px;
-  }
+  float: left;
+  width: 100%;
 }
 
 // Make single layout use more space
 .layout--single {
   .page__inner-wrap {
     @include breakpoint($large) {
-      padding-left: 1em;
-      padding-right: 1em;
+      position: relative;  // For absolute positioned TOC
+      padding-left: 0;
+      padding-right: 0;
     }
 
     @include breakpoint($x-large) {
-      padding-left: 2em;
-      padding-right: 2em;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
@@ -87,28 +91,38 @@ $right-sidebar-width-wide: 300px !default;
   .page__content {
     @include breakpoint($large) {
       float: left;
-      width: calc(100% - 220px);
-      padding-right: 20px;
+      width: calc(100% - #{$right-sidebar-width-narrow} - 1em);
+      padding-right: 1em;
     }
 
     @include breakpoint($x-large) {
-      width: calc(100% - 270px);
-      padding-right: 20px;
+      width: calc(100% - #{$right-sidebar-width} - 2em);
+      padding-right: 2em;
     }
   }
   
   // Ensure the TOC appears on the right
   .sidebar__right {
     @include breakpoint($large) {
-      float: right;
-      clear: right;
-      width: 200px;
-      margin-left: 20px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: $right-sidebar-width-narrow;
       margin-right: 0;
+      padding-left: 1em;
+      z-index: 10;
+      
+      &.sticky {
+        @include clearfix();
+        position: sticky;
+        top: 2em;
+        float: right;
+        clear: both;
+      }
     }
 
     @include breakpoint($x-large) {
-      width: 250px;
+      width: $right-sidebar-width;
     }
   }
 }
@@ -181,44 +195,34 @@ html.dark {
   }
 }
 
-// TOC adjustments for better space usage
-.sidebar__right {
-  // Sticky TOC styling
-  &.sticky {
-    @include breakpoint($large) {
-      max-height: calc(100vh - 4em);
-      overflow-y: auto;
-      position: sticky;
-      top: 2em;
+// TOC content styling
+.toc {
+  font-size: 0.875rem;
+  background: rgba(0, 0, 0, 0.02);
+  border-radius: 4px;
+  padding: 1em;
+  
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  
+  li {
+    padding: 0.125em 0;
+  }
+  
+  a {
+    color: inherit;
+    text-decoration: none;
+    
+    &:hover {
+      text-decoration: underline;
     }
   }
   
-  // Style the TOC content
-  .toc {
-    font-size: 0.875rem;
-    
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    
-    li {
-      padding: 0.125em 0;
-    }
-    
-    a {
-      color: inherit;
-      text-decoration: none;
-      
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-    
-    .active {
-      font-weight: bold;
-    }
+  .active {
+    font-weight: bold;
   }
 }
 
